--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ matrix:
   allow_failures:
   - go: tip
 script:
-- "./build-all"
+- "./.travis/build-all"
 - go get golang.org/x/tools/cmd/cover
 - go test -coverprofile fmt
 deploy:
